--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="page-header-menu">
 					<a href="#" class="page-header-menu__link">Компания</a>
-					<a href="#" class="page-header-menu__link">Каталог</a>
+					<a href="#" class="page-header-menu__link active">Каталог</a>
 					<a href="#" class="page-header-menu__link">Системы открывания</a>
 					<a href="#" class="page-header-menu__link">Где купить</a>
 					<a href="#dealer-popup" class="page-header-menu__link js-popup-inline">Стать дилером</a>
@@ -64,7 +64,7 @@
 						<div class="container">
 							<div class="menu-mobile__list">
 								<a href="#" class="menu-mobile__link">Компания</a>
-								<a href="#" class="menu-mobile__link">Каталог</a>
+								<a href="#" class="menu-mobile__link active">Каталог</a>
 								<a href="#" class="menu-mobile__link">Системы открывания</a>
 								<a href="#" class="menu-mobile__link">Где купить</a>
 								<a href="#" class="menu-mobile__link">Стать дилером</a>
