--- a/assets/src/style/components/media.scss
+++ b/assets/src/style/components/media.scss
@@ -26,6 +26,27 @@
             max-width: 1040px;
         }
     }
+    .systems__list,
+    .contacts{
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    .systems__item {
+        width: 100%;
+        padding: 0;
+    }
+
+    .findings__list{
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    .findings__item{
+        width: 100%;
+        padding: 0;
+    }
+    .findings__txt {
+        min-height: inherit;
+    }
 }
 
 
@@ -150,14 +171,17 @@
             margin-bottom: 22px;
         }
     }
-    h1{
-        font-size: 24px;
-        line-height: 28px;
+    .workarea{
+        h1{
+            font-size: 24px;
+            line-height: 28px;
+        }
+        h2{
+            font-size: 20px;
+            line-height: 26px;
+        }
     }
-    h2{
-        font-size: 20px;
-        line-height: 26px;
-    }
+    
     .page-footer__info,
     .page-footer__links{
         text-align: center;
@@ -549,6 +573,14 @@
     .b-where-show{
         margin-bottom: 0;
     }
+    .contacts{
+        .page-map{
+            position: relative;
+            width: 100%;
+            height: 300px;
+            opacity: 1;
+        }
+    }
 }
 
 
@@ -588,6 +620,41 @@
     .where-types__info {
         flex: 1 1 100%;
         max-width: 100%;
+    }
+    .contacts__top{
+        border: 1px solid #000;
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0 0 30px;
+        padding: 15px 5px;
+        text-align: center;
+    }
+    .contacts .tabs-nav__item {
+        font-size: 18px;
+    }
+    .contacts-form{
+        padding-top: 40px;
+    }
+    .contacts-form__title{
+        line-height: 24px;
+    }
+    .workarea .contacts-form input[type=email],
+    .workarea .contacts-form input[type=password],
+    .workarea .contacts-form input[type=text],
+    .workarea .contacts-form select,
+    .workarea .contacts-form textarea {
+        font-size: 14px;
+        padding: 10px;
+    }
+    .findings__top{
+        font-size: 18px;
+    }
+    .findings__txt{
+        font-size: 13px;
+        line-height: 16px;
+    }
+    .findings__item{
+        margin-bottom: 20px;
     }
 }
 
