--- a/assets/src/template/header-catalog.html
+++ b/assets/src/template/header-catalog.html
@@ -64,7 +64,7 @@
 						<div class="container">
 							<div class="menu-mobile__list">
 								<a href="#" class="menu-mobile__link">Компания</a>
-								<a href="#" class="menu-mobile__link">Каталог</a>
+								<a href="#" class="menu-mobile__link active">Каталог</a>
 								<a href="#" class="menu-mobile__link">Системы открывания</a>
 								<a href="#" class="menu-mobile__link">Где купить</a>
 								<a href="#" class="menu-mobile__link">Стать дилером</a>
