--- a/assets/src/template/head.html
+++ b/assets/src/template/head.html
@@ -14,12 +14,21 @@
 <!-- favicon end-->
 
 <!-- og  -->
-<!-- <meta property="og:title" content="">
-<meta property="og:site_name" content="">
-<meta property="og:url" content="">
-<meta property="og:description" content="">
-<meta property="og:type" content="article">
-<meta property="og:image" content="img/og.jpg"> -->
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://html.n3.by/pav/profiledoors/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TEST">
+    <meta property="og:description" content="TEST TEST TEST">
+    <meta property="og:image" content="http://html.n3.by/pav/profiledoors/img/content/og.jpg?v3">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="html.n3.by">
+    <meta property="twitter:url" content="http://html.n3.by/pav/profiledoors/index.html">
+    <meta name="twitter:title" content="TEST">
+    <meta name="twitter:description" content="TEST TEST TEST">
+    <meta name="twitter:image" content="http://html.n3.by/pav/profiledoors/img/content/og.jpg?v3">
+
 <!-- og end-->
 
 <link href="css/libs.min.css" rel="stylesheet">
